@@ -78,7 +78,7 @@ HERWIG_LOOPTOOLS
 
 HERWIG_PDF_PATH
 
-HERWIG_CHECK_FASTJET
+FASTJET_CHECK_FASTJET
 
 HERWIG_VERSIONSTRING
 
